--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,9 @@
-.App {
+/* .App {
   text-align: center;
 }
 
 .App-logo {
   height: 40vmin;
-  pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -35,4 +34,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
