--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,6 +1,8 @@
 @use './utilities.scss' as u;
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@600&family=Roboto&family=Roboto+Mono&display=swap');
 
 body{
    background-color: u.$black; 
    color: u.$white;
+   font-family: 'Oswald';
 }
