--- a/client/src/components/ButtonHome/ButtonHome.scss
+++ b/client/src/components/ButtonHome/ButtonHome.scss
@@ -1,13 +1,17 @@
 @use './../../utilities.scss' as u;
 
-.button-home{
-    display: inline-block;
-    color: u.$green;
-    background-color: u.$black;
-    border: 2px solid u.$white;
+.link-home{
+    display: block;
+    width: 200px;
     padding: 1em;
+    border: 2px solid u.$white;
+    color: u.$green;
+    text-decoration: none;
+    background-color: u.$black;
     font-weight: bold;
     font-size: 2em;
+    text-align: center;
+    margin: 2em auto;
     &:hover{
         color: u.$black;
         background-color: u.$white;
