--- a/client/src/components/MenuSearch/MenuSearch.scss
+++ b/client/src/components/MenuSearch/MenuSearch.scss
@@ -5,7 +5,7 @@
     justify-content: center;
     margin: 1em 0;
     gap: 1em;
-    .container-filter, .container-order{
+    .container-filter{
         display: flex;
         flex-direction: column;
         // gap: .5em;
